# evolutionary-algorithms

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  LICENCE  Makefile  README.md  conftest.py  noxfile.py  pyproject.toml
src/evola/: population.py  scene.py  simulation.py  solution.py
src/evola/epso/: __init__.py  particle.py  performance_version.py  simulation.py  swarm.py
src/evola/epso/academic_version/: __init__.py  simulation.py  swarm.py
src/examples/: __init__.py  moore.py  wingo.py
tests/: epso_acceptance_test.py
