[tool.pytest.ini_options]
markers = [
    "slow: marks tests as being slow",
    "integration: tags the integration tests",
]


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "evola"
version = "0.0.9"
description = "Evolutionary algorithms"
authors = ["David Freire <up201806711@up.pt>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DavidFreire-FEUP/evolutionary-algorithms"

packages = [
    { include = "evola", from = "src" },
]

[tool.poetry.dependencies]
python = ">3.8"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.4"
isort = "^5.12.0"
flake8 = "4.0.1"
black = "22.3.0"
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"
pre-commit = "2.19.0"
coverage = "6.4.1"
ipython = "^8.4.0"
safety = "^2.2.0"
nox = "^2023.4.22"
flake8-bugbear = "22.4.25"
twine = "^4.0.1"
matplotlib = "^3.6.0"
tqdm = "^4.64.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
